[package]
name = "SoulOS"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["C:/Program Files/qemu/qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]
run-args = []
test-args = []
test-success-exit-code = 0
test-timeout = 300
test-no-reboot = true